--- a/website/templates/components/issues_list.pug
+++ b/website/templates/components/issues_list.pug
@@ -14,7 +14,7 @@ script.
 
 	// Manage pseudo-responsive layout according to page width
 	function fillPage(issues) {
-		issuesListDom.innerHTML = `<div class="col-12 mt-3 text-center"><img src="/images/empty.svg" alt="" style="height: 128px" /><p style="font-size: 2rem;">Aucun signalement pour l'instant !</p></div>`;
+		issuesListDom.innerHTML = `<div class="col-12 mt-3 text-center"><img src="/images/empty.svg" alt="" style="height: 128px" /><p style="font-size: 2rem;">#{__("Aucun signalement pour l'instant !")}</p></div>`;
 
 		if(issues.length > 0) {
 			// Fill columns with issues
@@ -52,7 +52,7 @@ script.
 			const badgeComms = document.createElement("span");
 			badgeComms.classList.add("badge", "badge-pill", "badge-primary", "float-right", "cursor-pointer");
 			badgeComms.setAttribute("data-filter", "comments");
-			badgeComms.appendChild(document.createTextNode(`${issue.properties.comments.length - 1} commentaire(s)`));
+			badgeComms.appendChild(document.createTextNode(`${issue.properties.comments.length - 1} #{__("commentaire(s)")}`));
 			badgeComms.addEventListener("click", e => commentsDom.classList.toggle("d-none"));
 			issueUserDom.appendChild(badgeComms);
 		}
@@ -69,9 +69,9 @@ script.
 			smallDom.appendChild(userLink);
 		}
 		else {
-			smallDom.appendChild(document.createTextNode("Anonyme"));
+			smallDom.appendChild(document.createTextNode("#{__("Anonyme")}"));
 		}
-		smallDom.appendChild(document.createTextNode(` - ${new Date(issue.properties.comments[0].date.split(" ")[0]).toLocaleString('fr-FR', { day: 'numeric', month: 'long', year: 'numeric' })}`));
+		smallDom.appendChild(document.createTextNode(` - ${new Date(issue.properties.comments[0].date.split(" ")[0]).toLocaleString(navigator.language, { day: 'numeric', month: 'long', year: 'numeric' })}`));
 		issueUserDom.appendChild(smallDom);
 		if(!issue.properties.comments[0].user) { issueUserDom.setAttribute("data-filter", "anonymous"); }
 		issueDom.appendChild(issueUserDom);
@@ -106,10 +106,10 @@ script.
 
 		// Other comments
 		if(issue.properties.comments.length > 1) {
-			const notesStatuses = { "opened": "Ouvert", "closed": "Fermé", "reopened": "Réouvert", "commented": null };
+			const notesStatuses = { "opened": "#{__("Ouvert")}", "closed": "#{__("Fermé")}", "reopened": "#{__("Réouvert")}", "commented": null };
 			commentsDom.innerHTML = issue.properties.comments.slice(1).map((cmt, i) => `<div class="border-top pdm-note-comment pt-2 mt-2">
 				<div class="text-muted" style="font-size: 0.9rem">
-					${notesStatuses[cmt.action] ? notesStatuses[cmt.action]+" par " : ""}${cmt.user || "une personne anonyme"} le ${new Date(cmt.date.split(" ").slice(0, 2).join("T")).toLocaleString('fr-FR', { day: 'numeric', month: 'long', year: 'numeric' })}
+					${notesStatuses[cmt.action] ? notesStatuses[cmt.action]+" par " : ""}${cmt.user || "une personne anonyme"} le ${new Date(cmt.date.split(" ").slice(0, 2).join("T")).toLocaleString(navigator.language, { day: 'numeric', month: 'long', year: 'numeric' })}
 				</div>
 				${cmt.html}
 			</div>`).join("");
@@ -129,11 +129,11 @@ script.
 		});
 
 		// Can be processed directly ?
-		if(issue.properties.comments[0].text.includes("Attributs renseignés :")) {
+		if(issue.properties.comments[0].text.includes("#{__("Attributs renseignés :")}")) {
 			const badgeDirect = document.createElement("span");
 			badgeDirect.classList.add("badge", "badge-pill", "badge-success", "mr-1");
 			badgeDirect.setAttribute("data-filter", "ready");
-			badgeDirect.appendChild(document.createTextNode("Prêt à intégrer"));
+			badgeDirect.appendChild(document.createTextNode("#{__("Prêt à intégrer")}"));
 			badges.push(badgeDirect);
 		}
 
@@ -169,7 +169,7 @@ script.
 			noteid: "note/"+issue.properties.id,
 			osmid: featureId,
 			tags,
-			title: featureId ? "Compléter" : "Éditer",
+			title: featureId ? "#{__("Compléter")}" : "#{__("Éditer")}",
 			page: "issues",
 			originalCoordinates: { lng: issue.geometry.coordinates[0], lat: issue.geometry.coordinates[1] }
 		});
