--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -277,7 +277,7 @@ script.
 			.then(res => res.json())
 			.then(meta => {
 				const labels = Object.assign({ name: meta.title.auto }, osmoseLabels[`${meta.item}_all`], osmoseLabels[`${meta.item}_${meta.class}`]);
-				const buttons = Object.assign({ done: "#{__("C'est fait")}", false: "#{__("Rien ici")}", add: "#{__("Intégrer cet objet")}" }, osmoseButtons[`${meta.item}_all`], osmoseButtons[`${meta.item}_${meta.class}`]);
+				const buttons = Object.assign({ done: "#{__("C'est fait")}", false: "#{__("Rien ici / déjà fait")}", add: "#{__("Intégrer cet objet")}" }, osmoseButtons[`${meta.item}_all`], osmoseButtons[`${meta.item}_${meta.class}`]);
 
 				let tags = [];
 				let tagsForEdit = {};
@@ -494,7 +494,7 @@ script.
 
 			const divButtonFalse = document.createElement("button");
 			divButtonFalse.classList.add("btn", "btn-warning", "btn-block", "mt-2");
-			divButtonFalse.appendChild(document.createTextNode("#{__("✘ Rien ici")}"));
+			divButtonFalse.appendChild(document.createTextNode("✘ #{__("Rien ici / déjà fait")}"));
 			divButtonFalse.title = "Marquer qu'il n'y a rien ici si vous n'avez pas vu de #{statistics.feature_name} sur le terrain";
 			divButtonFalse.addEventListener("click", e => ignoreOsmCompare(feature));
 			resDiv.appendChild(divButtonFalse);
