Display contribution statistics per boundary

--- a/website/templates/layout.pug
+++ b/website/templates/layout.pug
@@ -3,6 +3,8 @@ doctype html
 html(lang="fr")
 	head
 		include common/head.pug
+
+		block head
 	body
 		//- Header
 		include common/body_header.pug
