--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -111,6 +111,17 @@ a.dropdown-item:not([href]):hover {
 	font-size: 1.1rem;
 }
 
+@keyframes flickerAnimation {
+	0%   { opacity:1; }
+	50%  { opacity:0.4; }
+	100% { opacity:1; }
+}
+
+.pdm-loading {
+	background-color: #ddd;
+	animation: flickerAnimation 1s infinite;
+}
+
 
 /*
 * Blog posts
@@ -830,12 +841,6 @@ input:checked + .slider:before {
 	}
 }
 
-@keyframes flickerAnimation {
-	0%   { opacity:1; }
-	50%  { opacity:0.4; }
-	100% { opacity:1; }
-}
-
 .pdm-issue-skeleton {
 	background-color: #eee;
 	animation: flickerAnimation 1s infinite;
@@ -881,4 +886,47 @@ input:checked + .slider:before {
 
 #filters input[type="checkbox"]:checked + label span.badge.badge-outline-primary {
 	background-color: #007bff;
+}
+
+
+/*
+ * Statistics
+ */
+
+/* Map */
+#map-stats {
+	width: 100%;
+	height: 500px;
+	border-radius: 10px;
+}
+
+#map-stats.fullscreen {
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	top: 0;
+	border-radius: 0;
+	z-index: 15000;
+}
+
+#map-stats-legend .map-stats-symbol {
+	display: inline-block;
+	margin: 0 10px;
+	text-align: center;
+	color: white;
+}
+
+.map-stats-popup {
+	width: 400px;
+}
+
+@media (max-width: 576px) {
+	#map-stats {
+		height: 300px;
+	}
+
+	.map-stats-popup {
+		width: 250px;
+	}
 }
